@@ -1,3 +1,6 @@
+01-05-21 : List characters in the account menu now shows the race and 
+             classes of each of the characters.
+
 01-01-21 : More Garble tweaks
            - Even easier to understand with maxed language skills
            - Group tells are now considered non-verbal communication
